@@ -365,15 +365,27 @@ db_update_ident( struct db_i *dbip, const char *new_title, double local2mm )
 	int			v4units;
 
 	RT_CK_DBI(dbip);
-	if (RT_G_DEBUG&DEBUG_DB) bu_log("db_update_ident( x%x, '%s', %g )\n",
-		dbip, new_title, local2mm );
 
-	BU_ASSERT_LONG( dbip->dbi_version, >, 0 );
+	if (!new_title)
+	    new_title = "";
+
+	if (RT_G_DEBUG&DEBUG_DB)
+	    bu_log("db_update_ident( x%x, '%s', %g )\n", dbip, new_title, local2mm);
 
 	if ( dbip->dbi_read_only )
-		return(-1);
+	    return -1;
 
-	if ( dbip->dbi_version > 4 )  return db5_update_ident( dbip, new_title, local2mm );
+	/* make sure dbip is a valid version */
+	if ( dbip->dbi_version <= 0 ) {
+	    bu_log("Invalid geometry database write request encountered.\n"
+		   "Converting to READ-ONLY mode.\n");
+	    dbip->dbi_read_only = 1;
+	    return -1;
+	}
+
+	/* assume it's a v5 */
+	if ( dbip->dbi_version > 4 )
+	    return db5_update_ident( dbip, new_title, local2mm );
 
 	RT_DIR_SET_NAMEP(&dir, "/IDENT/");
 	dir.d_addr = 0L;
